--- a/grav/user/themes/annekesinnema/scss/sections/blog.scss
+++ b/grav/user/themes/annekesinnema/scss/sections/blog.scss
@@ -42,8 +42,7 @@
 .blog-post__image,
 .blog-post__body img {
     height: auto;
-    width: calc(100% + 8rem);
-    margin: 1rem -2rem;
+    margin: 1.5rem auto;
 
     @media screen and (min-width: $tablet-portrait) {
         width: 100%;
